Moved test from komet-main