@@ -5,13 +5,13 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.73.0</version>
+        <version>1.64.0</version>
         <relativePath/>
     </parent>
     <groupId>dev.ikm.komet</groupId>
     <artifactId>komet-parent</artifactId>
     <name>KOMET</name>
-    <version>1.58.0-lifecycle-SNAPSHOT</version>
+    <version>1.58.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <inceptionYear>2015</inceptionYear>
     <licenses>
@@ -58,7 +58,6 @@
         <module>knowledge-layout</module>
         <module>kview</module>
         <module>sync</module>
-        <module>knowledge-layout-editor</module>
         <module>application</module>
     </modules>
     <properties>
@@ -66,8 +65,8 @@
 
         <!-- Tinkar Core Variables -->
         <tinkar-core.groupId>dev.ikm.tinkar</tinkar-core.groupId>
-        <tinkar-composer.version>1.13.0</tinkar-composer.version>
-        <tinkar-core.version>1.127.0-lifecycle-SNAPSHOT</tinkar-core.version>
+        <tinkar-composer.version>1.10.0</tinkar-composer.version>
+        <tinkar-core.version>1.125.0</tinkar-core.version>
 
         <!-- IKM Evrete Variables -->
         <ikm-evrete.groupId>org.evrete</ikm-evrete.groupId>
@@ -85,8 +84,6 @@
         <jpro-platform.version>0.5.7</jpro-platform.version>
 
         <!-- TestFX Variables -->
-        <!-- TODO: duplicate for tinkar-starter-? -->
-        <tinkar-starter-data.version>1.1.2</tinkar-starter-data.version>
         <tinkar-starter-data-reasoned.version>1.0.0</tinkar-starter-data-reasoned.version>
         <testfx.version>4.0.18-jpms</testfx.version>
         <openjfx-monocle.version>21.0.2-jpms</openjfx-monocle.version>
@@ -239,11 +236,6 @@
                 <artifactId>sync</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>knowledge-layout-editor</artifactId>
-                <version>${project.version}</version>
-            </dependency>
 
             <!-- Tinkar Core Dependencies -->
             <dependency>
@@ -260,12 +252,6 @@
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>entity-provider</artifactId>
                 <version>${tinkar-core.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${tinkar-core.groupId}</groupId>
-                <artifactId>integration</artifactId>
-                <version>${tinkar-core.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
@@ -631,10 +617,8 @@
 
     <repositories>
         <repository>
-            <id>tinkar-nexus</id>
-            <url>https://nexus.tinkar.org/repository/ike-public/</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
@@ -683,36 +667,6 @@
                     <artifactId>jpro-maven-plugin</artifactId>
                     <version>${jpro.version}</version>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <additionalOptions>
-                            <additionalOption>--enable-preview</additionalOption>
-                        </additionalOptions>
-                        <additionalJOptions>
-                            <additionalJOption>--enable-preview</additionalJOption>
-                        </additionalJOptions>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>attach-javadocs</id>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <configuration>
-                        <!-- Exclude files using JEP 447 (statements before super/this) - unsupported by Checkstyle parser -->
-                        <!-- @SuppressWarnings is ineffective because Checkstyle fails during parsing, before annotations are processed -->
-                        <excludes>**/ViewContext.java,**/DefaultKl*Field.java,**/KlReadOnly*Field.java,**/KlEditable*Field.java</excludes>
-                    </configuration>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -726,7 +680,6 @@
                     <release>${java.version}</release>
                     <compilerArgs>
                         <arg>-parameters</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
@@ -769,8 +722,7 @@
                                         <include>**/*ITestFX.java</include>
                                     </includes>
                                     <argLine>
-                                        --enable-preview
-                                        ${commonTestFXArgs}
+                                        -Xmx16g ${commonTestFXArgs}
                                     </argLine>
                                     <forkCount>1</forkCount>
                                     <reuseForks>false</reuseForks>
@@ -815,8 +767,7 @@
                                         <include>**/*UTestFX.java</include>
                                     </includes>
                                     <argLine>
-                                        --enable-preview
-                                        ${commonTestFXArgs}
+                                        -Xmx16g ${commonTestFXArgs}
                                     </argLine>
                                 </configuration>
                             </execution>
